--- a/Frismart/Base.lproj/Main.storyboard
+++ b/Frismart/Base.lproj/Main.storyboard
@@ -891,7 +891,6 @@
                     <connections>
                         <outlet property="logoImageView" destination="BWy-Zu-lNF" id="ABn-3E-HPT"/>
                         <outlet property="pagesControllerView" destination="WCC-i0-aue" id="Kb7-OL-i2k"/>
-                        <segue destination="U19-O8-q6O" kind="show" identifier="filpToLoginSegue" id="W6B-qq-0w0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m9R-ur-l5E" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -901,7 +900,7 @@
         <!--Profile View Controller-->
         <scene sceneID="91q-4L-VNb">
             <objects>
-                <viewController id="U19-O8-q6O" customClass="ProfileViewController" customModule="Frismart" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewController" id="U19-O8-q6O" customClass="ProfileViewController" customModule="Frismart" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="utR-pV-gBz"/>
                         <viewControllerLayoutGuide type="bottom" id="0bX-P4-a5T"/>
@@ -1067,7 +1066,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gzo-de-OAf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1930" y="1985"/>
+            <point key="canvasLocation" x="2050" y="2038"/>
         </scene>
         <!--Menu View Controller-->
         <scene sceneID="txi-S2-eDh">
@@ -1668,6 +1667,5 @@
     <inferredMetricsTieBreakers>
         <segue reference="HgH-sj-ZHL"/>
         <segue reference="5tN-JN-gmK"/>
-        <segue reference="W6B-qq-0w0"/>
     </inferredMetricsTieBreakers>
 </document>
