Creation de la classe STResponseStatus pour la gestion des réponses Ajout des textes manquants dans le localizable Ajout de l'action pour s'inscrire Modification de la fonction de login pour prendre en compte le statut de la réponse Nouvelle gestion de l'erreur du login Gestion de la réponse lors de l'inscription

--- a/Frismart/Resources/ViewControllers/RegisterPageViewController.xib
+++ b/Frismart/Resources/ViewControllers/RegisterPageViewController.xib
@@ -107,6 +107,9 @@
                     <state key="normal" title="S'enregistrer">
                         <color key="titleColor" red="0.1215686275" green="0.54901960780000003" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="clickOnRegister:" destination="-1" eventType="touchUpInside" id="Yhe-rC-mzx"/>
+                    </connections>
                 </button>
             </subviews>
             <animations/>
