Ajout de l'identifiant pour le LoginViewController dans le Main Ajout du code pour se déloguer et changer de vue

--- a/Frismart/Base.lproj/Main.storyboard
+++ b/Frismart/Base.lproj/Main.storyboard
@@ -848,7 +848,7 @@
         <!--Login View Controller-->
         <scene sceneID="Yvi-xe-uEx">
             <objects>
-                <viewController id="60P-Ye-wmC" customClass="LoginViewController" customModule="Frismart" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="60P-Ye-wmC" customClass="LoginViewController" customModule="Frismart" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qMB-WW-xn2"/>
                         <viewControllerLayoutGuide type="bottom" id="qaw-Ah-XCH"/>
