--- a/Frismart/Resources/Views/TopCategoryView.xib
+++ b/Frismart/Resources/Views/TopCategoryView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Exo2-Bold.ttf">
@@ -16,34 +16,32 @@
             <rect key="frame" x="0.0" y="0.0" width="257" height="139"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nqK-uH-w5P">
-                    <rect key="frame" x="0.0" y="0.0" width="257" height="138"/>
-                    <animations/>
-                </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5w-5l-oks">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nqK-uH-w5P">
                     <rect key="frame" x="0.0" y="0.0" width="257" height="139"/>
-                    <animations/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5w-5l-oks">
+                    <rect key="frame" x="20" y="20" width="217" height="99"/>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4h-zv-2Nh">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4h-zv-2Nh">
                     <rect key="frame" x="79" y="21" width="157" height="30"/>
-                    <animations/>
                     <color key="backgroundColor" red="0.1215686275" green="0.54901960780000003" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="A4Q-ks-fAF"/>
+                        <constraint firstAttribute="width" constant="157" id="SZa-xf-lOM"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="Exo2-Bold" family="Exo 2" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <animations/>
             <color key="backgroundColor" red="0.96862745100000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="nqK-uH-w5P" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9yA-Cr-Wk0"/>
-                <constraint firstItem="nqK-uH-w5P" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Hne-tX-emg"/>
-                <constraint firstItem="H5w-5l-oks" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="NDL-ZC-2wq"/>
-                <constraint firstAttribute="trailing" secondItem="nqK-uH-w5P" secondAttribute="trailing" id="SUj-U6-nhv"/>
-                <constraint firstItem="H5w-5l-oks" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="glz-ho-xGB"/>
-                <constraint firstAttribute="bottom" secondItem="H5w-5l-oks" secondAttribute="bottom" id="hUu-vQ-NZw"/>
-                <constraint firstAttribute="bottom" secondItem="nqK-uH-w5P" secondAttribute="bottom" constant="1" id="jTP-V1-L3q"/>
-                <constraint firstAttribute="trailing" secondItem="H5w-5l-oks" secondAttribute="trailing" id="ruc-xb-T0j"/>
+                <constraint firstItem="nqK-uH-w5P" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7E5-Fa-kQD"/>
+                <constraint firstAttribute="trailing" secondItem="l4h-zv-2Nh" secondAttribute="trailing" constant="21" id="Hcn-Wl-9Un"/>
+                <constraint firstItem="nqK-uH-w5P" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Vj0-Tn-dFA"/>
+                <constraint firstItem="l4h-zv-2Nh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="21" id="j1R-fx-QZh"/>
+                <constraint firstAttribute="bottom" secondItem="nqK-uH-w5P" secondAttribute="bottom" id="lEo-al-LM7"/>
+                <constraint firstAttribute="trailing" secondItem="nqK-uH-w5P" secondAttribute="trailing" id="qjO-7G-aZ5"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
