--- a/Frismart/Resources/Views/TopStoreView.xib
+++ b/Frismart/Resources/Views/TopStoreView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Exo2-ExtraLight.ttf">
@@ -22,17 +22,15 @@
             <rect key="frame" x="0.0" y="0.0" width="325" height="348"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d3i-aT-LdB">
-                    <rect key="frame" x="1" y="1" width="323" height="244"/>
-                    <animations/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d3i-aT-LdB">
+                    <rect key="frame" x="10" y="5" width="305" height="244"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="323" id="7kx-La-sDI"/>
                         <constraint firstAttribute="height" constant="244" id="JcF-7c-LPH"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waz Burger" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hP9-vm-UxO">
-                    <rect key="frame" x="16" y="253" width="127.5" height="32"/>
-                    <animations/>
+                    <rect key="frame" x="16" y="253" width="128" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="294" id="3sY-ey-lXf"/>
                         <constraint firstAttribute="height" constant="32" id="Vu6-ta-tct"/>
@@ -42,8 +40,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYz-LF-PH6">
-                    <rect key="frame" x="16" y="285" width="60" height="35.5"/>
-                    <animations/>
+                    <rect key="frame" x="16" y="285" width="60" height="36"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="60" id="Lu8-jQ-ulT"/>
                         <constraint firstAttribute="width" constant="60" id="jc3-st-QXv"/>
@@ -54,8 +51,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Libreville - 347 Hits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4cc-Xo-Ho3">
-                    <rect key="frame" x="16" y="321" width="102.5" height="21"/>
-                    <animations/>
+                    <rect key="frame" x="16" y="321" width="103" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="197" id="R8g-K0-xh7"/>
                         <constraint firstAttribute="height" constant="21" id="eiu-OY-gGH"/>
@@ -66,7 +62,6 @@
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iM0-XA-86g">
                     <rect key="frame" x="285" y="317" width="25" height="25"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="25" id="jxF-0t-y6m"/>
                         <constraint firstAttribute="height" constant="25" id="rHl-MB-opR"/>
@@ -74,7 +69,6 @@
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOS-N5-vbZ" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
                     <rect key="frame" x="76" y="291" width="80" height="16"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="16" id="4Ps-a5-e0b"/>
                         <constraint firstAttribute="height" constant="16" id="4gO-OH-VJ8"/>
@@ -96,37 +90,35 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fl-SA-LBW">
-                    <rect key="frame" x="0.0" y="0.0" width="325" height="348"/>
-                    <animations/>
+                    <rect key="frame" x="25" y="20" width="275" height="226"/>
                 </button>
             </subviews>
-            <animations/>
             <color key="backgroundColor" red="0.96862745100000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" constant="0.5" id="03f-9I-8Bo"/>
                 <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="6" id="0kl-7h-rNg"/>
-                <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="1" id="4aR-Hl-im1"/>
+                <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="4aR-Hl-im1"/>
                 <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="8vy-hZ-ht4"/>
-                <constraint firstAttribute="bottom" secondItem="4Fl-SA-LBW" secondAttribute="bottom" id="9xG-9x-zA4"/>
+                <constraint firstAttribute="bottom" secondItem="4Fl-SA-LBW" secondAttribute="bottom" constant="102" id="9xG-9x-zA4"/>
                 <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="6" id="Be9-KE-GeH"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="DyP-Zq-6gz"/>
-                <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" constant="1" id="GZ7-Km-Wc4"/>
+                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="DyP-Zq-6gz"/>
+                <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" constant="10" id="GZ7-Km-Wc4"/>
                 <constraint firstItem="nOS-N5-vbZ" firstAttribute="leading" secondItem="RYz-LF-PH6" secondAttribute="trailing" id="LHN-XR-kka"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="LOO-Xn-gkc"/>
-                <constraint firstAttribute="bottom" secondItem="4Fl-SA-LBW" secondAttribute="bottom" id="LnF-dq-Hfl"/>
+                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="LOO-Xn-gkc"/>
+                <constraint firstAttribute="bottom" secondItem="4Fl-SA-LBW" secondAttribute="bottom" constant="102" id="LnF-dq-Hfl"/>
                 <constraint firstAttribute="bottom" secondItem="4cc-Xo-Ho3" secondAttribute="bottom" constant="6" id="Ov0-6U-aWJ"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="PO0-rr-tIr"/>
-                <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="1" id="Qcq-rs-4ah"/>
-                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" id="bCH-qG-TU8"/>
+                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="PO0-rr-tIr"/>
+                <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Qcq-rs-4ah"/>
+                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" constant="25" id="bCH-qG-TU8"/>
                 <constraint firstItem="RYz-LF-PH6" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" id="eeI-BH-56W"/>
                 <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="15" id="eu3-cz-NR4"/>
-                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" id="f2U-el-MFO"/>
-                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" constant="8" id="fuy-Uh-Fhv"/>
+                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" constant="25" id="f2U-el-MFO"/>
+                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" constant="4" id="fuy-Uh-Fhv"/>
                 <constraint firstItem="RYz-LF-PH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="kAm-Mx-rxa"/>
                 <constraint firstItem="iM0-XA-86g" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="32" id="ocj-s1-06g"/>
                 <constraint firstItem="hP9-vm-UxO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="q5I-GP-mfu"/>
                 <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="nOS-N5-vbZ" secondAttribute="bottom" constant="14" id="sdu-b9-ehU"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vos-g9-aWB"/>
+                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="vos-g9-aWB"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
